tdf#91064: Revert "tdf#89790 DOCX: saving LO version number in app.xml"

This reverts commit 480ca7434a330b2678f9ef287cffd6d9cf27bed5.

Change-Id: I69a16425fc36979d49f409bbd7921495a22a35dc
Reviewed-on: https://gerrit.libreoffice.org/15737
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Joren De Cuyper <jorendc@libreoffice.org>