include/unotools/docinfohelper.hxx
@@ -29,8 +29,7 @@ class UNOTOOLS_DLLPUBLIC DocInfoHelper
 {
 public:
     static OUString GetGeneratorString();
-    static OUString GetApplicationString();
-    static OUString GetVersionString();
+
 };
 
 }   // namespace utl
