unotools/source/config/docinfohelper.cxx
@@ -41,44 +41,29 @@ OUString DocInfoHelper::GetGeneratorString()
     {
         aResult.append( aValue.replace( ' ', '_' ) );
         aResult.append( '/' );
-    }
 
-    aValue = GetVersionString();
-    if ( !aValue.isEmpty() )
-    {
-        aResult.append( aValue );
-    }
-
-    return aResult.makeStringAndClear();
-}
-
-
-OUString DocInfoHelper::GetVersionString()
-{
-    OUStringBuffer aResult;
-
-    // version is <product_versions>_<product_extension>$<platform>
-    OUString aValue( utl::ConfigManager::getProductVersion() );
-    if ( !aValue.isEmpty() )
-    {
-        aResult.append( aValue.replace( ' ', '_' ) );
-
-        aValue = utl::ConfigManager::getProductExtension();
+        aValue = utl::ConfigManager::getProductVersion();
         if ( !aValue.isEmpty() )
         {
             aResult.append( aValue.replace( ' ', '_' ) );
-        }
-    }
 
-    OUString os( "$_OS" );
-    OUString arch( "$_ARCH" );
-    ::rtl::Bootstrap::expandMacros(os);
-    ::rtl::Bootstrap::expandMacros(arch);
-    aResult.append( '$' );
-    aResult.append( os );
-    aResult.append( '_' );
-    aResult.append( arch );
-    aResult.append( ' ' );
+            aValue = utl::ConfigManager::getProductExtension();
+            if ( !aValue.isEmpty() )
+            {
+                aResult.append( aValue.replace( ' ', '_' ) );
+            }
+        }
+
+        OUString os( "$_OS" );
+        OUString arch( "$_ARCH" );
+        ::rtl::Bootstrap::expandMacros(os);
+        ::rtl::Bootstrap::expandMacros(arch);
+        aResult.append( '$' );
+        aResult.append( os );
+        aResult.append( '_' );
+        aResult.append( arch );
+        aResult.append( ' ' );
+    }
 
     // second product: LibreOffice_project/<build_information>
     // build_information has '(' and '[' encoded as '$', ')' and ']' ignored
@@ -111,7 +96,6 @@ OUString DocInfoHelper::GetVersionString()
 
     return aResult.makeStringAndClear();
 }
-
 
 } // end of namespace utl
 
